# mart_poultry_esp32_opencode

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci-cd.yml
docs/: SYSTEM_ARCHITECTURE.md  USER_MANUAL.md
main/: CMakeLists.txt  app_main.c  app_main.h  main.c
main/actuators/: actuator_manager.c  actuator_manager.h  buzzer_control.c  buzzer_control.h  fan_control.c  fan_control.h  feeder_control.c  feeder_control.h  heater_control.c  heater_control.h  lighting_control.c  lighting_control.h  ventilation_control.c  ventilation_control.h  water_pump.c  water_pump.h
main/connectivity/: mqtt_client.c  mqtt_client.h  poultry_mqtt.c  poultry_mqtt.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/control/: alert_system.c  alert_system.h  climate_control.c  climate_control.h  feeding_schedule.c  feeding_schedule.h  gas_leak_detector.c  gas_leak_detector.h  lighting_schedule.c  lighting_schedule.h  pid_controller.c  pid_controller.h
main/data/: data_logger.c  data_logger.h
main/include/: gas_alert_config.h  poultry_system_config.h
main/sensors/: ammonia_sensor.c  ammonia_sensor.h  co2_sensor.c  co2_sensor.h  dht22.c  dht22.h  feed_level_sensor.c  feed_level_sensor.h  gas_sensor.c  gas_sensor.h  light_sensor.c  light_sensor.h  sensor_manager.c  sensor_manager.h  water_level_sensor.c  water_level_sensor.h
