idf_component_register(
    SRCS 
        "app_main.c"
        "sensors/sensor_manager.c"
        "sensors/dht22.c"
        "sensors/ammonia_sensor.c"
        "sensors/co2_sensor.c"
        "sensors/light_sensor.c"
        "sensors/water_level_sensor.c"
        "sensors/feed_level_sensor.c"
        "sensors/gas_sensor.c"
        "actuators/actuator_manager.c"
        "actuators/fan_control.c"
        "actuators/heater_control.c"
        "actuators/feeder_control.c"
        "actuators/water_pump.c"
        "actuators/lighting_control.c"
        "actuators/ventilation_control.c"
        "actuators/buzzer_control.c"
        "actuators/buzzer_control.c"
        "control/pid_controller.c"
        "control/climate_control.c"
        "control/feeding_schedule.c"
        "control/lighting_schedule.c"
        "control/alert_system.c"
        "control/gas_leak_detector.c"
        "connectivity/wifi_manager.c"
        "connectivity/mqtt_client.c"
        "connectivity/web_server.c"
        "data/data_logger.c"
    INCLUDE_DIRS 
        "."
        "include"
        "sensors"
        "actuators"
        "control"
        "connectivity"
        "data"
    REQUIRES 
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        mqtt
        json
        esp_http_server
        driver
        esp_adc
        esp_timer
        spiffs
        fatfs
)
